--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
+    <div id="root"></div>
     <h1>Hello World</h1>
     <button>Click Me</button>
     <script src="./main.js"></script>
